# cpp-modules-cmake

./: CMakeLists.txt  LICENSE  README.md
CMakeModules/: functions.cmake
app/: CMakeLists.txt  main.cpp
lib1/src/: CMakeLists.txt  Logger.cpp
